# MIXAL

./: .gitignore  .gitmodules  .travis.yml  BingSiteAuth.xml  CHANGELOG.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  annotated.html  atomic_8cpp_source.html  classes.html  classmixal_1_1_computer-members.html  classmixal_1_1_computer.html  classmixal_1_1_expression-members.html  classmixal_1_1_expression.html  classmixal_1_1_expression_error-members.html  classmixal_1_1_expression_error.html  classmixal_1_1_i_o_device-members.html  classmixal_1_1_i_o_device.html  classmixal_1_1_i_o_device_card_punch-members.html  classmixal_1_1_i_o_device_card_punch.html  classmixal_1_1_i_o_device_card_reader-members.html  classmixal_1_1_i_o_device_card_reader.html  classmixal_1_1_i_o_device_disk-members.html  classmixal_1_1_i_o_device_disk.html  classmixal_1_1_i_o_device_line_printer-members.html  classmixal_1_1_i_o_device_line_printer.html  classmixal_1_1_i_o_device_paper_tape-members.html  classmixal_1_1_i_o_device_paper_tape.html  classmixal_1_1_i_o_device_seq_reader-members.html  classmixal_1_1_i_o_device_seq_reader.html  classmixal_1_1_i_o_device_seq_writer-members.html  classmixal_1_1_i_o_device_seq_writer.html  classmixal_1_1_i_o_device_storage-members.html  classmixal_1_1_i_o_device_storage.html  classmixal_1_1_i_o_device_tape-members.html  classmixal_1_1_i_o_device_tape.html  classmixal_1_1_i_o_device_typewriter-members.html  (+87 more)
.github/workflows/: c++.yml  cpp-unit-tests.yml  deploy-pages.yml  deploy.yml  python-build-test.yml  python.yml  tests.yml  wasm-build-test.yml
assets/: MixalWASM-5g-OaRnw.wasm  MixalWASM-64XFx5tP.wasm  MixalWASM-BBe_gy32.wasm  MixalWASM-BLHoQIml.wasm  MixalWASM-BQzujemu.wasm  MixalWASM-BThvvuyz.wasm  MixalWASM-BqgyYRWN.wasm  MixalWASM-CHDf6FEN.wasm  MixalWASM-CISjwfTB.wasm  MixalWASM-CX6pTKje.wasm  MixalWASM-CztnQthc.wasm  MixalWASM-D9hkVPGy.wasm  MixalWASM-Dw2mr_SV.wasm  MixalWASM-F1yq-MFv.wasm  MixalWASM-lJ0qYMkb.wasm  __vite-browser-external-B95rlk__.css  __vite-browser-external-BAgq56yE.css  __vite-browser-external-BBVbrIb5.css  __vite-browser-external-BZpvkR4l.css  __vite-browser-external-BueEsGPB.css  __vite-browser-external-C4LKzjYH.css  __vite-browser-external-C7Q-FbNt.js  __vite-browser-external-C92OJ4cJ.css  __vite-browser-external-CMVFkEEx.css  __vite-browser-external-CWA7Rxjj.css  __vite-browser-external-DJ-F2TtP.css  __vite-browser-external-DX66DVRa.css  __vite-browser-external-DqHThK3L.css  __vite-browser-external-zjKajuks.css  main--wsn2yIA.js  main-2rTFy6-y.js  main-AlVaLPge.js  main-BM-I3skj.js  main-BTzXNfdZ.js  main-BbxF9w14.js  main-C8t0kdde.js  main-CEnK_S_R.js  main-CGUZIhPc.js  main-CcxSH4c1.js  main-D80C-0xp.js  (+14 more)
examples/: 1_3_2_M_Find_the_maximum.json  1_3_2_M_Find_the_maximum.mix  1_3_2_P_Print_table_of_500_primes.json  1_3_2_P_Print_table_of_500_primes.mix  1_3_3_A_Multiply_permutations_in_cycle_form.json  1_3_3_B_Same_effect_as_A.mix  1_3_3_I_Inverse_in_space.mix  1_3_3_J_Analogous_to_program_I.json
include/: errors.h  expression.h  flags.h  instructions.h  io.h  machine.h  memory.h  mixal.i  parser.h  registers.h
python/: README.md  binding.cpp
python/tests/: reformat_codes.py  test_sample.py
python/tests/t_1_3_1/: 16_set_all_zeros_a.json  17_set_all_zeros_with_n_a.mix  17_set_all_zeros_with_n_b.mix  20_set_all_halt.mix  test_1_3_1.py
python/tests/t_1_3_3/: a_multiply_permutations_in_cycle_form.mix  test_1_3_3.py  (+1 more)
python/wrapper/: __init__.py
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_4.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+28 more)
src/: atomic.cpp  expression.cpp  flags.cpp  generate_get_instruction.py  generate_instruction_default_field.py  instructions.cpp  io.cpp  machine.cpp  machine_address_transfer.cpp  machine_arithmetic.cpp  machine_comparison.cpp  machine_conversion.cpp  machine_io.cpp  machine_jump.cpp  machine_load.cpp  machine_misc.cpp  machine_pesudo.cpp  machine_pseudo.cpp  machine_store.cpp  memory.cpp  mixal_wrap.cxx  parser.cpp  registers.cpp
tests/: test_atomic.cpp  test_expression.cpp  test_instructions.cpp  test_machine.cpp  test_machine_address_transfer.cpp  test_machine_arithmetic.cpp  test_machine_comparison.cpp  test_machine_conversion.cpp  test_machine_evaluate.cpp  test_machine_io.cpp  test_machine_jump.cpp  test_machine_load.cpp  test_machine_load_codes.cpp  test_machine_misc.cpp  test_machine_pseudo.cpp  test_machine_store.cpp  test_memory.cpp  test_parse.cpp  test_registers.cpp  test_sample.py
tests/cpp/: CMakeLists.txt  main.cpp  test_atomic.cpp  test_expression.cpp  test_instructions.cpp  test_machine.cpp  test_machine_address_transfer.cpp  test_machine_arithmetic.cpp  test_machine_comparison.cpp  test_machine_conversion.cpp  test_machine_evaluate.cpp  test_machine_io.cpp  test_machine_jump.cpp  test_machine_load.cpp  test_machine_load_codes.cpp  test_machine_misc.cpp  test_machine_pesudo.cpp  test_machine_store.cpp  test_main.cpp  test_memory.cpp  test_parse.cpp  test_registers.cpp
tests/cpp/sep/: CmakeLists.txt
tests/t_1_3_1/: 16_set_all_zeros_a.mix  17_set_all_zeros_with_n_a.mix  17_set_all_zeros_with_n_b_official.mix  18_number_one.mix  20_set_all_halt.mix  21_set_rj.mix  22_x_13_official.mix  23_reflect.mix  test_1_3_1.py
tests/t_1_3_3/: test_1_3_3.py
wasm/: .gitignore  README.md  binding.cpp  build.sh  eslint.config.mjs  index.d.ts  index.js  package-lock.json  package.json
wasm/test/: test_example.js  test_io_spec.js
web/: examples.html  index.html  package-lock.json  package.json  vite.config.ts
web/src/: editor.ts  io_devices.ts  main.ts  memory.ts  registers.ts  state.ts  style.css  theme.ts
web/tests/: 1_3.test.ts  utils.ts
(+2 files in other folders)
